--- a/1/Makefile
+++ b/1/Makefile
@@ -1,4 +1,4 @@
-GCC_FLAGS = -Wextra -Werror -Wall -Wno-gnu-folding-constant
+GCC_FLAGS = -std=gnu11 -Wextra -Werror -Wall -Wno-gnu-folding-constant
 
 all: libcoro.c solution.c
 	gcc $(GCC_FLAGS) libcoro.c solution.c
